fix: fixed the z-index of language box

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -18,4 +18,5 @@ body {
 /* hide scrol bar in a */
 ::-webkit-scrollbar {
   width: 0px;
+  height: 0;
 }
